Archive2/39/c5439e881a38b8/output
main.cpp: In instantiation of 'void foo(T) [with T = Test]':
main.cpp:22:15:   required from here
main.cpp:15:5: error: static assertion failed: T::p is a pointer
     static_assert( !has_pointer< T >::value, "T::p is a pointer" );
     ^
